Bug 454878: On Mac OS X, the 'count' argument to host_info should be initialized to HOST_BASIC_INFO_COUNT, which is the size of the host_basic_info structure in integer_t's.  r=joshmoz.